@@ -1,3 +1,7 @@
+JG-2001-12-04-0: Bugfix:    shepherd: async commands had no valid filehandles
+                            for stdin/stdout/stderr. This could cause the 
+                            async command, e.g. a terminate method, to fail.
+
 EB-2001-12-04-0: Enhancem.: Memory optimization for array jobs
 
 AH-2001-12-03-0: Bugfix:    Resolve hostname contained in 'act_qmaster' file 
